# nxp_monkey

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.html  setup.html
docs/adrs/: ADR-0001-versioning-tagging-release-policy.md  ADR-0002-cli-install-library-import-dependency-discipline.md  ADR-0003-test-stratification-and-helper-location.md  ADR-0004-documentation-lifecycle-and-release-boundary.md  ADR-0005-design-doc-and-test-ownership-signoff.md  ADR-0006-cache-directory-contract.md  ADR-0007-kex-upstream-and-version-resolution.md  ADR-0008-sdk-variant-policy.md  ADR-0009-cli-framework-and-help-formatting.md
docs/contracts/: command_manifest.v0.json  exceptions.json  exceptions.schema.v0.json  interface_design_manifest.v0.json
docs/contracts/schemas/: command_manifest.schema.v0.json  interface_design_manifest.schema.v0.json
docs/design/: index.html  styles.css
docs/design/api/: cache.html  details.html  fetch.html  index.html  kex_client.html  models.html  roadmap.html  search.html  xml_json.html
docs/design/cli/: cache.html  details.html  families.html  fetch.html  help.html  index.html  roadmap.html  search.html  version.html  versions.html
docs/releases/: 2026-06-04.md  2026-06-09.md
docs/research/: xml_survey.md
src/py/nxp_monkey/: __init__.py  __main__.py  _cli.py  _matching.py  _version.py  cache.py  details.py  fetch.py  index.py  kex_client.py  models.py  nxp_monkey_cmd_cache.py  nxp_monkey_cmd_details.py  nxp_monkey_cmd_families.py  nxp_monkey_cmd_fetch.py  nxp_monkey_cmd_index.py  nxp_monkey_cmd_roadmap.py  nxp_monkey_cmd_search.py  nxp_monkey_cmd_version.py  nxp_monkey_cmd_versions.py  readers.py  roadmap.py  search.py  serialization.py  xml_json.py
tests/: conftest.py  rack.toml
tests/L0_public_cli/: STRATUM.toml  test_cli_smoke.py
tests/L3_public_workflows/: STRATUM.toml  test_cache.py  test_details.py  test_fetch.py  test_index.py  test_kex_client.py  test_models.py  test_roadmap.py  test_search.py  test_xml_json.py
tests/L99_signoff/: STRATUM.toml  test_cli_thinness.py  test_command_manifest.py  test_docstrings.py  test_interface_manifest.py  test_python_signoff.py  test_release_metadata.py  test_repo_hygiene.py  test_standards_exceptions.py  test_static_checks.py
tests/fixtures/kex/: family_dir.xml  processors_dir.xml  versions.xml
tests/fixtures/parts/MCXSAMPLE/ksdk2_0/: MCXSAMPLE.xml  MCXSAMPLE_QFN32.xml  MCXSAMPLE_QFN48.xml  processor.properties
tests/fixtures/parts/MCXSAMPLE/ksdk2_0/MCXSAMPLE_QFN32/: part_info.xml
tests/fixtures/parts/MCXSAMPLE/ksdk2_0/clocks/: TOP.xml
tests/fixtures/parts/MCXSAMPLE/ksdk2_0/common/: cores_info.xml
tests/support_scripts/: __init__.py  fake_urlopen.py  install_test.py  py_signoff.py  py_signoff_baseline.json
