[project]
name = "nxp-monkey"
version = "2026.6.4"
description = "Cross-platform CLI and Python library for NXP MCUXpresso Config Tools chip data"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Wavenumber LLC" },
]
keywords = ["nxp", "mcuxpresso", "kex", "chip-data", "pinout", "embedded"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "platformdirs>=4.0.0",
    "rich>=13.0.0",
    "rich-argparse>=1.5.0",
]

[project.optional-dependencies]
test = [
    "build>=1.2.0",
    "jsonschema>=4.0.0",
    "pytest-json-report>=1.5.0",
    "pytest>=8.0.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "twine>=5.0.0",
    "wn-rack>=2026.6.4",
]

[dependency-groups]
dev = [
    "build>=1.2.0",
    "jsonschema>=4.0.0",
    "pytest-json-report>=1.5.0",
    "pytest>=8.0.0",
    "pyright>=1.1.390",
    "ruff>=0.8.0",
    "twine>=5.0.0",
    "wn-rack>=2026.6.4",
]

[project.urls]
Homepage = "https://github.com/wavenumber-eng/nxp_monkey"
Repository = "https://github.com/wavenumber-eng/nxp_monkey"
Issues = "https://github.com/wavenumber-eng/nxp_monkey/issues"

[project.scripts]
nxp-monkey = "nxp_monkey._cli:main"
nxpm = "nxp_monkey._cli:main"

[tool.wn_dev_std]
profile = "python-package"
distribution = "pypi"
languages = ["python"]
strict = true

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "AGENTS.md",
    "src/py/nxp_monkey/**",
    "README.md",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "docs/architecture.html",
    "docs/setup.html",
    "docs/adrs/**",
    "docs/design/**",
    "docs/contracts/**",
    "docs/releases/**",
    "tests/**",
    "pyproject.toml",
]
exclude = [
    "docs/plans/**",
    "docs/research/**",
    "rack_results/**",
    "tests/rack_results/**",
    "tests/**/output/**",
    "**/__pycache__/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/py/nxp_monkey"]

[tool.hatch.version]
path = "src/py/nxp_monkey/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/py", "."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "network: tests that hit the live NXP KEX API",
    "slow: long-running tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pyright]
include = ["src/py/nxp_monkey", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
